# healthsynth

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PROJECT_PLANNER.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
configs/: demo.yaml
configs/profiles/: canada.yaml  japan_oncology_training.yaml  oncology_competitor_launch.yaml  oncology_loe.yaml  oncology_market_access.yaml  oncology_product_launch.yaml  oncology_training.yaml  test_minimal.yaml  uk_oncology_training.yaml  us_commercial.yaml
configs/scenarios/: loss_of_exclusivity.yaml  mature_brand.yaml  new_product_launch.yaml
demo_output/: hcp_master.csv  healthsynth.duckdb  product.csv  validation_report.md
docs/: ARCHITECTURE.md  CONFIGURATION_MODEL.md  CONTRIBUTING.md  DATA_MODEL.md  DECISIONS.md  GETTING_STARTED.md  LEARNING_PATH.md  VISION.md
examples/: 01_running_healthsynth.ipynb  02_market_profiles.ipynb  03_competitor_products.ipynb  04_duckdb_analytics.ipynb  05_market_share_analysis.ipynb  06_market_demand_analysis.ipynb  08_loss_of_exclusivity.ipynb  09_competitor_launch.ipynb  10_market_access_analysis.ipynb  README.md  getting_started.ipynb
exporters/: duckdb_exporter.py
healthsynth/: __init__.py  cli.py  config.py  core.py  exceptions.py  generator.py  metadata.py
healthsynth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
healthsynth/commercial/: dynamics.py  entities.py  facts.py  simulation.py
healthsynth/commercial/events/: __init__.py  loe.py  market_access.py
healthsynth/config/: defaults.py  loader.py  merge.py  validator.py
healthsynth/io/: manifest.py
healthsynth/simulation/: calendar.py
healthsynth/validation/: checks.py
notebooks/: 01_running_healthsynth.ipynb  02_market_profiles.ipynb  03_competitor_products.ipynb  04_duckdb_analytics.ipynb  05_market_share_analysis.ipynb  06_market_demand_analysis.ipynb  07_new_product_launch.ipynb  08_loss_of_exclusivity.ipynb
output/: call_activity.csv  hcp_master.csv  prescriptions.csv  product.csv
tests/: test_calendar.py  test_commercial_scenarios.py  test_config_loader.py  test_generator.py  test_generator_slow.py  test_loe_event.py  test_market_access_event.py
ui/: app.py  charts.py  models.py  narrative.py  scenarios.py  services.py  signals.py  timeline.py
