[project]
name = "healthsynth"
version = "0.1.0"
description = "An open-source pharmaceutical commercial market simulator for learning and analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Virendra Pratap Singh" }
]

keywords = [
    "synthetic-data",
    "pharmaceutical",
    "commercial-analytics",
    "healthcare",
    "simulation",
    "life-sciences",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas",
    "numpy",
    "duckdb",
    "typer",
    "rich",
    "faker",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/vpsn99/healthsynth"
Repository = "https://github.com/vpsn99/healthsynth"
Documentation = "https://github.com/vpsn99/healthsynth/tree/main/docs"
Issues = "https://github.com/vpsn99/healthsynth/issues"

[project.scripts]
healthsynth = "healthsynth.cli:app"

[tool.setuptools.packages.find]
include = ["healthsynth*"]
exclude = ["output*", "tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"